[gd_scene load_steps=17 format=3 uid="uid://bvaqs7xflnn6k"]

[ext_resource type="Script" path="res://Scenes/Enemy/enemy.gd" id="1_qyxrn"]
[ext_resource type="Shader" path="res://Scenes/Utility/enemy.gdshader" id="2_2i04t"]
[ext_resource type="PackedScene" uid="uid://b1ovmjy0yetjh" path="res://Scenes/Utility/hurt_box.tscn" id="2_baema"]
[ext_resource type="Texture2D" uid="uid://dq7gkgpuw3v7e" path="res://Graphics/LD56Player.png" id="3_8qd28"]
[ext_resource type="PackedScene" uid="uid://c1fexk7c3d10o" path="res://Scenes/Utility/hit_box.tscn" id="3_qmosc"]
[ext_resource type="AudioStream" uid="uid://bwjwmk1dws1uf" path="res://Sound/enemyhit.wav" id="6_ln005"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f8a3v"]
resource_local_to_scene = true
shader = ExtResource("2_2i04t")
shader_parameter/start_frame = 0
shader_parameter/current_frame = 0
shader_parameter/mix_ratio = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ln04t"]
radius = 10.198

[sub_resource type="CircleShape2D" id="CircleShape2D_bpgx3"]
radius = 15.1327

[sub_resource type="CircleShape2D" id="CircleShape2D_x5p85"]
radius = 13.0

[sub_resource type="Animation" id="Animation_pjyma"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_bfoio"]
resource_name = "walk"
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.99),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1.05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ytnmn"]
_data = {
"RESET": SubResource("Animation_pjyma"),
"walk": SubResource("Animation_bfoio")
}

[sub_resource type="Animation" id="Animation_4rob6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_scnhm"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"coll"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_75qrg"]
_data = {
"RESET": SubResource("Animation_4rob6"),
"fade_in": SubResource("Animation_scnhm")
}

[node name="Enemy" type="CharacterBody2D" groups=["CircleEnemy"]]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_qyxrn")
knockback_recovery = 20.0

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.551799, 0.0337884, 0.0337881, 1)
material = SubResource("ShaderMaterial_f8a3v")
texture = ExtResource("3_8qd28")
hframes = 3
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ln04t")

[node name="HurtBox" parent="." instance=ExtResource("2_baema")]
collision_layer = 4
collision_mask = 4
monitorable = false
HurtBoxType = 1

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource("CircleShape2D_bpgx3")

[node name="HitBox" parent="." instance=ExtResource("3_qmosc")]
collision_layer = 2
collision_mask = 2
monitoring = false

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource("CircleShape2D_x5p85")

[node name="shaderTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[node name="attacktimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="hideTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ytnmn")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_75qrg")
}
autoplay = "fade_in"

[node name="snd_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_ln005")
volume_db = -3.0
max_distance = 800.0
attenuation = 0.378929

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="shaderTimer" to="." method="_on_shader_timer_timeout"]
[connection signal="timeout" from="attacktimer" to="." method="_on_attacktimer_timeout"]

[editable path="HurtBox"]
[editable path="HitBox"]
